--- a/src/components/Projects.module.css
+++ b/src/components/Projects.module.css
@@ -1,5 +1,126 @@
 .container {
-  /* background-color: green; */
+  padding: 7rem 1.5rem 3rem 1.5rem;
   width: 100%;
-  height: 50rem;
+  text-align: center;
+}
+
+.container h2 {
+  color: var(--light-coral);
+  text-transform: uppercase;
+  margin-bottom: 1.5rem;
+}
+
+.projects {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  column-gap: 2rem;
+  row-gap: 2rem;
+  flex-wrap: wrap;
+}
+
+.project {
+  background-color: var(--police-blue);
+  max-width: 328px;
+  /* background-color: var(--rapture-blue); */
+  border: 2px solid hsl(186, 98%, 17%);
+  border-radius: 0.5rem 0.5rem 1rem 1rem;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+  margin-inline: auto;
+}
+
+.title {
+  background-color: rgb(194, 192, 192);
+  /* background-color: hsl(186, 79%, 74%); */
+  padding: 0.4rem;
+}
+
+.title h3 {
+  color: rgb(56, 56, 56);
+  font-family: "Nunito", sans-serif;
+  font-weight: 600;
+  /* color: hsl(186, 98%, 17%); */
+  text-transform: uppercase;
+  margin-bottom: 0.2rem;
+}
+
+.category {
+  background-color: rgb(56, 56, 56);
+  color: var(--white);
+  width: 160px;
+  font-family: "Nunito", sans-serif;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  margin-inline: auto;
+}
+
+.image img {
+  width: 100%;
+  height: auto;
+  vertical-align: bottom;
+}
+
+.links {
+  padding: 1rem 0;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  /* flex-wrap: wrap; */
+  justify-content: center;
+  align-items: center;
+  gap: 0.6rem;
+}
+
+.links a {
+  background-color: rgb(194, 192, 192);
+  color: rgb(56, 56, 56);
+  font-family: "Nunito", sans-serif;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  width: 200px;
+  border: 1px solid hsl(186, 98%, 17%);
+  border-radius: 0.4rem;
+  padding: 0.1rem 0.4rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 1rem;
+}
+
+.links img {
+  width: 30px;
+  height: 30px;
+}
+
+@media (max-width: 290px) {
+  .container {
+    padding: 7rem 0.6rem 3rem 0.6rem;
+  }
+  .links a {
+    width: 170px;
+    font-size: 0.7rem;
+    gap: 0.6rem;
+  }
+}
+
+@media (min-width: 38rem) {
+  .projects {
+    max-width: 588px;
+    margin-inline: auto;
+  }
+  .project {
+    max-width: calc(100% / 2 - 1rem);
+  }
+  .links {
+    height: 220px;
+  }
+}
+
+@media (min-width: 56.5rem) {
+  .projects {
+    max-width: 61.75rem;
+  }
+  .project {
+    max-width: calc(100% / 3 - (4rem / 3));
+  }
 }
