--- a/src/components/Projects.module.css
+++ b/src/components/Projects.module.css
@@ -1,12 +1,14 @@
 .container {
-  padding: 7rem 1.5rem 3rem 1.5rem;
+  padding: 6rem 1.5rem 0 1.5rem;
   width: 100%;
   text-align: center;
 }
 
 .container h2 {
   color: var(--light-coral);
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
+  font-size: 2rem;
+  opacity: 0.6;
   margin-bottom: 1.5rem;
 }
 
@@ -25,7 +27,7 @@
   /* background-color: var(--rapture-blue); */
   border: 2px solid hsl(186, 98%, 17%);
   border-radius: 0.5rem 0.5rem 1rem 1rem;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+  box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.5);
   margin-inline: auto;
 }
 
@@ -54,6 +56,10 @@
   margin-inline: auto;
 }
 
+.image {
+  position: relative;
+}
+
 .image img {
   width: 100%;
   height: auto;
@@ -61,14 +67,30 @@
 }
 
 .links {
-  padding: 1rem 0;
+  padding: 3rem 0;
   list-style: none;
   display: flex;
   flex-direction: column;
-  /* flex-wrap: wrap; */
   justify-content: center;
   align-items: center;
   gap: 0.6rem;
+}
+
+.info {
+  padding: 2.5rem 0.8rem;
+  /* display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.6rem; */
+  position: relative;
+  /* overflow: hidden;
+  overflow: scroll; */
+}
+
+.info p {
+  color: white;
+  font-size: 0.88rem;
 }
 
 .links a {
@@ -85,6 +107,25 @@
   justify-content: flex-start;
   align-items: center;
   gap: 1rem;
+  position: relative;
+}
+
+.info button {
+  background-color: transparent;
+  width: fit-content;
+  border: none;
+  position: absolute;
+  top: 0.5rem;
+  left: 0.5rem;
+}
+
+.descriptionBtn {
+  background-color: transparent;
+  width: fit-content;
+  border: none;
+  position: absolute;
+  bottom: -2rem;
+  left: 0.5rem;
 }
 
 .links img {
@@ -92,14 +133,51 @@
   height: 30px;
 }
 
+.descriptionBtn img {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+/* .description {
+  position: absolute;
+  top: 0.5rem;
+  left: 0.5rem;
+} */
+
+/* .links .infoIcon {
+  width: 1.rem;
+  height: 1.7rem;
+} */
+
+.close {
+  padding: 3px;
+  height: 1.5rem;
+  width: 1.5rem;
+  border: 1px solid white;
+  border-radius: 50%;
+}
+
+.hidden {
+  display: none;
+}
+
 @media (max-width: 290px) {
   .container {
-    padding: 7rem 0.6rem 3rem 0.6rem;
+    padding: 6rem 0.6rem 0 0.6rem;
   }
   .links a {
     width: 170px;
     font-size: 0.7rem;
     gap: 0.6rem;
+  }
+  .info {
+    padding: 3rem 0.8rem;
+  }
+}
+
+@media (min-width: 36rem) {
+  .container h2 {
+    font-size: 3.4rem;
   }
 }
 
@@ -112,7 +190,11 @@
     max-width: calc(100% / 2 - 1rem);
   }
   .links {
-    height: 220px;
+    padding: 1rem 0;
+    height: 255px;
+  }
+  .info {
+    height: 255px;
   }
 }
 
