--- a/src/components/Contact.module.css
+++ b/src/components/Contact.module.css
@@ -1,5 +1,177 @@
 .container {
-  /* background-color: purple; */
+  padding: 6rem 1.5rem 1rem 1.5rem;
   width: 100%;
-  height: 50rem;
+  text-align: center;
+}
+
+.container h2 {
+  color: white;
+  font-size: 2rem;
+  opacity: 0.6;
+  margin-bottom: 1.5rem;
+}
+
+.form {
+  /* padding: 0.5rem; */
+  max-width: 33.75rem;
+  margin-inline: auto;
+  text-align: right;
+  margin-bottom: 5rem;
+}
+
+.form input,
+.form .error {
+  background-color: transparent;
+  color: var(--white);
+  width: 100%;
+  font-size: 0.9375rem;
+  font-weight: 600;
+  line-height: 1.5625rem;
+  padding-bottom: 1rem;
+  padding-left: 0.875rem;
+  padding-right: 1rem;
+  border: none;
+  border-bottom: 1px solid white;
+  border-radius: 0;
+  outline: none;
+  margin-bottom: 1.5rem;
+  box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, 0.3);
+}
+
+.form .error {
+  margin-bottom: 0.5rem;
+  /* border-bottom: 1px solid hsl(0, 56%, 28%) !important; */
+}
+
+.form input::placeholder {
+  color: var(--white);
+  font-weight: 600;
+  opacity: 0.6;
+}
+
+.form textarea,
+.form .messageError {
+  background-color: transparent;
+  color: var(--white);
+  width: 100%;
+  font: inherit;
+  font-size: 0.9375rem;
+  font-weight: 600;
+  line-height: 1.5625rem;
+  padding-left: 0.875rem;
+  padding-right: 1rem;
+  resize: none;
+  border: none;
+  border-bottom: 1px solid white;
+  border-radius: 0;
+  outline: none;
+  margin-bottom: 1.5rem;
+  vertical-align: top;
+  cursor: pointer;
+  box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, 0.3);
+}
+
+.form .messageError {
+  margin-bottom: 0.5rem;
+  /* border-bottom: 1px solid hsl(0, 56%, 28%) !important; */
+}
+
+.form textarea::placeholder {
+  color: var(--white);
+  font-weight: 600;
+  opacity: 0.6;
+}
+
+/* this code prevents the background color 
+from changing when using Chrome autocomplete */
+
+.form input:-webkit-autofill,
+.form input:-webkit-autofill:hover,
+.form input:-webkit-autofill:focus,
+.form input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px hsl(202, 41%, 41%) inset !important;
+  -webkit-text-fill-color: var(--white) !important;
+}
+
+.form span {
+  display: block;
+  color: hsl(0, 56%, 28%);
+  font-size: 0.8rem;
+  font-weight: 700;
+  line-height: 0.8125rem;
+  padding-left: 0.875rem;
+  margin-bottom: 1.0625rem;
+}
+
+.actions {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 1.5rem;
+}
+
+.actions a {
+  display: block;
+}
+
+.actions img {
+  vertical-align: bottom;
+}
+
+.form button {
+  background-color: var(--white);
+  color: hsl(202, 41%, 41%);
+  width: 7.6875rem;
+  height: 2.5rem;
+  font-size: 1.125rem;
+  font-weight: 600;
+  line-height: 1.75rem;
+  border: 2px solid var(--white);
+}
+
+.up {
+  background-color: black;
+  color: white;
+  width: 5rem;
+  /* height: 3rem; */
+  padding: 0.2rem 0.5rem;
+  font-size: 0.8rem;
+  font-weight: 600;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-inline: auto;
+}
+
+.up img {
+  filter: brightness(0) saturate(100%) invert(33%) sepia(8%) saturate(3235%)
+    hue-rotate(139deg) brightness(91%) contrast(81%);
+  width: 1.5rem;
+  height: 1.5rem;
+  vertical-align: bottom;
+}
+
+@media (hover: hover) {
+  .form input:hover,
+  .form textarea:hover {
+    border-bottom: 1px solid var(--rapture-blue);
+  }
+  .form button:hover {
+    background-color: hsl(202, 41%, 41%);
+    color: var(--white);
+  }
+}
+
+@media (max-width: 22rem) {
+  .container {
+    padding: 6rem 1rem 4rem 1rem;
+  }
+}
+
+@media (min-width: 36rem) {
+  .container h2 {
+    font-size: 3.4rem;
+  }
+  /* .form {
+  } */
 }
