--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -67,7 +67,7 @@
 }
 
 .links {
-  background-color: var(--rapture-blue);
+  background-color: var(--police-blue);
   /* background-color: hsl(221, 54%, 43%); */
   width: calc(100% - 4rem);
   max-width: 23rem;
