--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@
   --deep-jungle-green: hsl(186, 100%, 14%);
   --police-blue: hsl(187, 41%, 29%);
   --rapture-blue: hsl(179, 42%, 63%);
+  --midnight-green: hsl(186, 98%, 17%);
+  --sacramento-state-green: hsl(186, 96%, 10%);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -32,13 +34,26 @@ body {
 
 main {
   /* background-color: white; */
-  background: linear-gradient(to bottom, black, hsl(350, 51%, 41%));
-  /* background: linear-gradient(to bottom, black, #481f55); */
-  /* background: linear-gradient(to bottom, black, #3b3b3b); */
+  background: linear-gradient(to bottom, black, hsl(202, 41%, 41%));
+  /* background: linear-gradient(to bottom, black, hsl(202, 70%, 69%)); */
+  /* background: linear-gradient(to bottom, black, hsl(350, 51%, 41%)); */
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap; /* added line */
+  border: 0;
 }
 
 a,
-button {
+button,
+input {
   font: inherit;
   cursor: pointer;
 }
