--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -1,11 +1,11 @@
 .footer {
   padding: 2rem 1rem;
-  background-color: black;
+  background-color: var(--black);
   text-align: center;
 }
 
 .footer p {
-  color: white;
+  color: var(--white);
   font-size: 0.8rem;
   text-transform: uppercase;
 }
