--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -1,9 +1,8 @@
 .glossyHeader,
 .transparentHeader {
-  /* background-color: hsl(186, 98%, 17%); */
   background: rgba(0, 0, 0, 0.6);
   padding: 0.3rem 1.5rem;
-  border-bottom: 3px solid hsl(186, 100%, 4%);
+  border-bottom: 3px solid var(--green-blue);
   display: flex;
   position: fixed;
   width: 100%;
@@ -18,7 +17,6 @@
 
 .transparentHeader {
   background-color: hsla(186, 100%, 4%, 0.5);
-  /* background-color: transparent; */
 }
 
 @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
@@ -68,13 +66,12 @@
 
 .links {
   background-color: var(--police-blue);
-  /* background-color: hsl(221, 54%, 43%); */
   width: calc(100% - 4rem);
   max-width: 23rem;
   height: 100%;
   max-height: 100%;
   padding: 2rem;
-  border: 4px solid hsl(186, 100%, 4%);
+  border: 0.25rem solid var(--green-blue);
   position: fixed;
   top: 0;
   right: 0;
@@ -99,8 +96,8 @@
 }
 
 .socials img {
-  width: 40px;
-  height: 40px;
+  width: 2.5rem;
+  height: 2.5rem;
   vertical-align: bottom;
 }
 
@@ -144,28 +141,6 @@
 .list a {
   text-transform: uppercase;
 }
-
-/* .pattern1 {
-  background-color: hsl(0, 0%, 100%);
-  opacity: 0.3;
-  height: 80%;
-  width: 30%;
-  border-bottom-right-radius: 80rem;
-  position: absolute;
-  left: 0;
-  top: 0;
-}
-
-.pattern2 {
-  background-color: hsl(0, 0%, 100%);
-  opacity: 0.3;
-  height: 8rem;
-  width: 8rem;
-  border-radius: 50%;
-  position: absolute;
-  right: -4rem;
-  bottom: -4rem;
-} */
 
 @media (hover: hover) {
   .list a:hover {
