--- a/src/components/Projects.module.css
+++ b/src/components/Projects.module.css
@@ -6,7 +6,6 @@
 
 .container h2 {
   color: var(--light-coral);
-  /* text-transform: uppercase; */
   font-size: 2rem;
   opacity: 0.6;
   margin-bottom: 1.5rem;
@@ -23,33 +22,30 @@
 
 .project {
   background-color: var(--police-blue);
-  max-width: 328px;
-  /* background-color: var(--rapture-blue); */
-  border: 2px solid hsl(186, 98%, 17%);
+  max-width: 20.5rem;
+  border: 2px solid var(--turquoise);
   border-radius: 0.5rem 0.5rem 1rem 1rem;
-  box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.5);
+  box-shadow: 0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.5);
   margin-inline: auto;
 }
 
 .title {
-  background-color: rgb(194, 192, 192);
-  /* background-color: hsl(186, 79%, 74%); */
+  background-color: hsl(0, 2%, 76%);
   padding: 0.4rem;
 }
 
 .title h3 {
-  color: rgb(56, 56, 56);
+  color: hsl(0, 0%, 22%);
   font-family: "Nunito", sans-serif;
   font-weight: 600;
-  /* color: hsl(186, 98%, 17%); */
   text-transform: uppercase;
   margin-bottom: 0.2rem;
 }
 
 .category {
-  background-color: rgb(56, 56, 56);
+  background-color: hsl(0, 0%, 22%);
   color: var(--white);
-  width: 160px;
+  width: 10rem;
   font-family: "Nunito", sans-serif;
   font-size: 0.8rem;
   text-transform: uppercase;
@@ -78,29 +74,22 @@
 
 .info {
   padding: 2.5rem 0.8rem;
-  /* display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 0.6rem; */
   position: relative;
-  /* overflow: hidden;
-  overflow: scroll; */
 }
 
 .info p {
-  color: white;
+  color: var(--white);
   font-size: 0.88rem;
 }
 
 .links a {
-  background-color: rgb(194, 192, 192);
-  color: rgb(56, 56, 56);
+  background-color: hsl(0, 2%, 76%);
+  color: hsl(0, 0%, 22%);
   font-family: "Nunito", sans-serif;
   font-size: 0.8rem;
   text-transform: uppercase;
-  width: 200px;
-  border: 1px solid hsl(186, 98%, 17%);
+  width: 12.5rem;
+  border: 1px solid var(--turquoise);
   border-radius: 0.4rem;
   padding: 0.1rem 0.4rem;
   display: flex;
@@ -129,8 +118,8 @@
 }
 
 .links img {
-  width: 30px;
-  height: 30px;
+  width: 1.875rem;
+  height: 1.875rem;
 }
 
 .descriptionBtn img {
@@ -138,22 +127,11 @@
   height: 1.5rem;
 }
 
-/* .description {
-  position: absolute;
-  top: 0.5rem;
-  left: 0.5rem;
-} */
-
-/* .links .infoIcon {
-  width: 1.rem;
-  height: 1.7rem;
-} */
-
 .close {
   padding: 3px;
   height: 1.5rem;
   width: 1.5rem;
-  border: 1px solid white;
+  border: 1px solid var(--white);
   border-radius: 50%;
 }
 
@@ -161,12 +139,12 @@
   display: none;
 }
 
-@media (max-width: 290px) {
+@media (max-width: 18.125rem) {
   .container {
     padding: 6rem 0.6rem 0 0.6rem;
   }
   .links a {
-    width: 170px;
+    width: 10.625rem;
     font-size: 0.7rem;
     gap: 0.6rem;
   }
@@ -183,7 +161,7 @@
 
 @media (min-width: 38rem) {
   .projects {
-    max-width: 588px;
+    max-width: 36.75rem;
     margin-inline: auto;
   }
   .project {
@@ -191,10 +169,10 @@
   }
   .links {
     padding: 1rem 0;
-    height: 255px;
+    height: 15.9375rem;
   }
   .info {
-    height: 255px;
+    height: 15.9375rem;
   }
 }
 
